--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -7,12 +7,15 @@
                 <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
             </li>
             <li class="nav-item">
-                <a routerLink="lists" routerLinkActive="active" class="nav-link">Lists</a>
+                <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
             </li>
             <li class="nav-item">
-                <a routerLink="messages" routerLinkActive="active" class="nav-link">Messages</a>
+                <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
             </li>
             }
+            <li class="nav-item">
+                <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
+            </li>
         </ul>
 
         @if (accountService.currentUser()) {
