--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -45,7 +45,7 @@
             </tab>
             <tab heading="Photos" #photoTab="tab">
                 @if (photoTab.active) {
-                <gallery class="gallery" [items]="images"> </gallery>
+                <gallery class="gallery" [itemAutosize]="true" [items]="images"> </gallery>
                 }
             </tab>
             <tab heading="Messages">
